--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Social Good: Environment & Animal Awareness</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/global/variables.css">
+    <link rel="stylesheet" href="css/global/theme.css">
     <link rel="stylesheet" href="css/components/navbar.css">
     <link rel="stylesheet" href="css/components/card.css">
     <link rel="stylesheet" href="css/components/footer.css">
@@ -48,8 +50,8 @@
             <li><a href="#report">Report</a></li>
             <li><a href="#contact">Contact</a></li>
             <!-- Login SignUp pages  -->
-          <li><a href="/frontend/src/pages/Login.html" class="btn-login">Login</a></li>
-          <li><a href="/frontend/src/pages/Signup.html" class="btn-signup">Sign Up</a></li>
+            <li><a href="/frontend/src/pages/Login.html" class="btn-login">Login</a></li>
+            <li><a href="/frontend/src/pages/Signup.html" class="btn-signup">Sign Up</a></li>
 
         </ul>
     </nav>
@@ -276,6 +278,8 @@
 
     <!-- Font Awesome for icons -->
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+
+    <script src="js/global/theme-toggle.js"></script>
 
 </body>
 
