more fields added in report form

--- a/frontend/src/pages/report.html
+++ b/frontend/src/pages/report.html
@@ -130,6 +130,20 @@
                     <option>Other</option>
                     </select>
                 </div>
+                
+                <div class="field">
+                    <label>🪪 Name</label>
+                    <input type="text" placeholder="Mark">
+                </div>
+                
+                <div class="field">
+                    <label>⚧️ Gender</label>
+                    <select required>
+                    <option value="">Select</option>
+                    <option>Male</option>
+                    <option>Female</option>
+                    </select>
+                </div>
 
                 <div class="field">
                     <label>🎨 Color / Markings</label>
