Imp group page with community folder

--- a/frontend/pages/community/groups.html
+++ b/frontend/pages/community/groups.html
@@ -146,10 +146,10 @@
                     <div class="cta-content">
                         <h3 class="cta-title">Start Your Own Group</h3>
                         <p class="cta-description">Have a passion for environmental causes? Create your own community group and bring together like-minded individuals.</p>
-                        <button class="cta-btn" id="create-group-btn">
+                        <a href="create-group.html" class="cta-btn" id="create-group-btn">
                             <i class="fa-solid fa-plus"></i>
                             Create Group
-                        </button>
+                        </a>
                     </div>
                     <div class="cta-image">
                         <i class="fa-solid fa-users-gear"></i>
@@ -233,8 +233,7 @@
 
     <!-- Scripts -->
     <script src="../../js/main.js"></script>
-    <script src="../../js/components/navbar.js"></script>
-    <script src="../../js/components/footer.js"></script>
-    <script src="../../js/pages/groups.js"></script>
+    <script src="../../js/components/component-loader.js"></script>
+    <script src="../../js/pages/community/groups.js"></script>
 </body>
 </html>
