--- a/frontend/pages/sitemap.html
+++ b/frontend/pages/sitemap.html
@@ -166,7 +166,9 @@
           <li><a href="carbon-calculator.html"><i class="fas fa-calculator"></i> Carbon Footprint Calculator</a></li>
           <li><a href="eco-news.html"><i class="fas fa-newspaper"></i> Eco News & Updates</a></li>
           <li><a href="download-resources.html"><i class="fas fa-download"></i> Download Resources</a></li>
-          <li><a href="community-forum.html"><i class="fas fa-comments"></i> Community Forum</a></li>
+          <li><a href="community/forums.html"><i class="fas fa-comments"></i> Community Forum</a></li>
+          <li><a href="community/groups.html"><i class="fas fa-users-rectangle"></i> Community Groups</a></li>
+          <li><a href="community/create-group.html"><i class="fas fa-plus-circle"></i> Create New Group</a></li>
           <li><a href="events.html"><i class="fas fa-calendar-alt"></i> Upcoming Events</a></li>
         </ul>
       </div>
