--- a/frontend/pages/animal-safety/anti-poaching.html
+++ b/frontend/pages/animal-safety/anti-poaching.html
@@ -557,16 +557,20 @@
     </main>
 
     <!-- Footer -->
-    <div id="footer-placeholder"></div>
+    <div id="footer-container"></div>
 
-
+ <!-- Share Modal Container -->
+    <div id="share-modal-container"></div>
     <!-- Scripts -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="../../js/components/navbar-loader.js"></script>
-    <script src="../../js/components/footer-loader.js"></script>
+
     <script src="../../js/components/share-modal.js"></script>
     <script src="../../js/pages/animal-safety/anti-poaching.js"></script>
         <!-- Load Components Script -->
+      <script src="../../js/components/navbar-loader.js"></script>
+    <script src="../../js/components/footer-loader.js"></script>
+    
+    <!-- Load Components Script -->
     <script>
       // Simple component loader
       document.addEventListener('DOMContentLoaded', function() {
